static-lang-3/editors/tree-sitter-langx/grammar.js
    source_file: $ => repeat($._top_level),

    _top_level: $ => choice(
      $._declaration,
      $._statement,
    ),

    // ===================== DECLARATIONS =====================

    _declaration: $ => choice(
      $.function_definition,
      $.let_declaration,
      $.var_declaration,
      $.const_declaration,
      $.struct_definition,
      $.enum_definition,
      $.type_alias,
      $.constraint_declaration,
      $.import_declaration,
    ),

    parameter_list: $ => seq(
      '(',
      commaSep($.parameter),
      ')',
    ),

    parameter: $ => seq(
      optional('...'),
      field('name', $.identifier),
      optional(field('type', $._type)),
      optional(seq('=', field('default', $._expression))),
    ),

    let_declaration: $ => seq(
      'let',
      field('pattern', choice(
        seq($.identifier, optional(field('type', $._type))),
        $.tuple_pattern,
        $.array_pattern,
        $.struct_pattern,
      )),
      '=',
      field('value', $._expression),
      ';',
    ),

    _statement: $ => choice(
      $.expression_statement,
      $.assignment,
      $.if_statement,
      $.while_statement,
      $.for_statement,
      $.return_statement,
      $.yield_statement,
      $.break_statement,
      $.continue_statement,
    ),

    expression_statement: $ => prec(-1, seq(
      $._expression,
      optional(';'),
    )),

    while_statement: $ => seq(
      'while',
      '(',
      field('condition', $._expression),
      ')',
      field('body', $.block),
    ),

    for_statement: $ => seq(
      'for',
      '(',
      field('variable', choice($.identifier, $.tuple_pattern)),
      ':',
      field('iterable', $._expression),
      ')',
      field('body', $.block),
    ),

    block: $ => seq(
      '{',
      repeat(choice(
        $._declaration,
        $._statement,
      )),
      '}',
    ),

    // ===================== EXPRESSIONS =====================

    _expression: $ => choice(
      $.primary_expression,
      $.binary_expression,
      $.unary_expression,
      $.call_expression,
      $.index_expression,
      $.field_expression,
      $.automap_expression,
      $.space_pipeline,
      $.ternary_expression,
      $.lambda_expression,
      $.match_expression,
      $.if_expression,
      $.tuple_expression,
      $.array_expression,
      $.struct_construction,
      $.struct_update,
      $.parenthesized_expression,
    ),

    primary_expression: $ => choice(
      $.identifier,
      $._literal,
      $.this_expression,
    ),

    _literal: $ => choice(
      $.integer_literal,
      $.float_literal,
      $.imaginary_literal,
      $.string_literal,
      $.triple_string_literal,
      $.guillemet_string_literal,
      $.symbol_literal,
      $.boolean_literal,
      $.nil_literal,
    ),

    binary_expression: $ => {
      const operators = [
        [PREC.ARROW, '<-', 'right'],
        [PREC.ARROW, '->', 'right'],
        [PREC.PIPELINE, '|>', 'left'],
        [PREC.OR, '||', 'left'],
        [PREC.AND, '&&', 'left'],
        [PREC.CONS, '::', 'right'],
        [PREC.EQUAL, '==', 'left'],
        [PREC.EQUAL, '!=', 'left'],
        [PREC.COMPARE, '<', 'left'],
        [PREC.COMPARE, '<=', 'left'],
        [PREC.COMPARE, '>', 'left'],
        [PREC.COMPARE, '>=', 'left'],
        [PREC.BIT_OR, '|', 'left'],
        [PREC.BIT_XOR, '^', 'left'],
        [PREC.BIT_AND, '&', 'left'],
        [PREC.SHIFT, '<<', 'left'],
        [PREC.SHIFT, '>>', 'left'],
        [PREC.SHIFT, '>>>', 'left'],
        [PREC.ADD, '+', 'left'],
        [PREC.ADD, '-', 'left'],
        [PREC.ADD, '$', 'left'],
        [PREC.MUL, '*', 'left'],
        [PREC.MUL, '/', 'left'],
        [PREC.MUL, '%', 'left'],
        [PREC.MUL, '//', 'left'],
        [PREC.ADD, '..', 'left'],
        [PREC.ADD, '..<', 'left'],
      ];

      return choice(...operators.map(([prec_val, op, assoc]) => {
        const rule = seq(
          field('left', $._expression),
          field('operator', op),
          field('right', $._expression),
        );
        return assoc === 'right' ? prec.right(prec_val, rule) : prec.left(prec_val, rule);
      }));
    },

    call_expression: $ => prec(PREC.POSTFIX, seq(
      field('function', $._expression),
      '(',
      commaSep($._expression),
      ')',
    )),

    index_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', $._expression),
      '[',
      field('index', $._expression),
      ']',
    )),

    field_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', $._expression),
      '.',
      field('field', choice($.identifier, $.integer_literal)),
    )),

    space_pipeline: $ => prec.right(PREC.POSTFIX, seq(
      field('value', $._expression),
      field('function', $.identifier),
      optional(seq('(', commaSep($._expression), ')')),
    )),

    ternary_expression: $ => prec.right(PREC.TERNARY, seq(
      field('condition', $._expression),
      '?',
      field('consequence', $._expression),
      ':',
      field('alternative', $._expression),
    )),

    lambda_expression: $ => prec.right(1, seq(
      'fn',
      optional($.type_parameters),
      $.parameter_list,
      optional(field('return_type', $._type)),
      choice(
        seq('=', field('body', $._expression)),
        field('body', $.block),
      ),
    )),

    match_expression: $ => seq(
      'match',
      '(',
      field('value', $._expression),
      ')',
      '{',
      repeat($.match_arm),
      '}',
    ),

    match_arm: $ => seq(
      field('pattern', $.pattern),
      optional(seq('if', '(', field('guard', $._expression), ')')),
      ':',
      field('body', choice(
        seq($._expression, ';'),
        $.block,
      )),
    ),

    array_expression: $ => seq(
      '[',
      commaSep($._expression),
      ']',
    ),

    struct_construction: $ => prec(PREC.POSTFIX, seq(
      field('type', $.identifier),
      '{',
      commaSep(choice(
        $.struct_field_value,
        $._expression,
      )),
      '}',
    )),

    struct_field_value: $ => seq(
      field('name', $.identifier),
      ':',
      field('value', $._expression),
    ),

    pattern: $ => choice(
      $.wildcard_pattern,
      $.literal_pattern,
      $.binding_pattern,
      $.tuple_pattern,
      $.array_pattern,
      $.cons_pattern,
      $.enum_pattern,
      $.struct_pattern,
    ),

    wildcard_pattern: $ => '_',

    literal_pattern: $ => choice(
      $.integer_literal,
      $.float_literal,
      $.string_literal,
      $.boolean_literal,
      $.nil_literal,
      $.symbol_literal,
    ),

    _type: $ => choice(
      $.primitive_type,
      $.generic_type,
      $.array_type,
      $.map_type,
      $.tuple_type,
      $.paren_type,
      $.function_type,
      $.type_identifier,
    ),

    primitive_type: $ => choice(
      'Int',
      'Float',
      'Bool',
      'String',
      'Symbol',
      'Void',
      'Fraction',
      'Complex',
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    integer_literal: $ => token(choice(
      /[0-9][0-9_]*/,
      /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
    )),

    float_literal: $ => token(
      seq(
        /[0-9][0-9_]*/,
        '.',
        /[0-9][0-9_]*/,
        optional(seq(/[eE]/, optional(/[+-]/), /[0-9]+/)),
      ),
    ),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.escape_sequence,
      )),
      '"',
    ),

    string_content: $ => token.immediate(prec(1, /[^"\\]+/)),

    symbol_literal: $ => token(seq("'", /[a-zA-Z_][a-zA-Z0-9_]*/)),

    boolean_literal: $ => choice('true', 'false'),

    nil_literal: $ => 'nil',

    line_comment: $ => token(seq('--', /.*/)),
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function commaSep(rule) {
  return optional(commaSep1(rule));
}

function sep1(rule, delimiter) {
  return seq(rule, repeat(seq(delimiter, rule)));
}
